--- a/assets/index.html
+++ b/assets/index.html
@@ -4,11 +4,47 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Riˈmōt App</title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <title>Work Riˈmōt</title>
 </head>
 <body>
-
-</body>
-</html>
+    <div class="container">
+        <div id="recent-places">
+            <h3>
+            Recent Location Updates: 
+            <span id="location"></span>
+            </h3>
+        </div>
+        <div id="user-comments">
+            <h3>
+                User: 
+                <span id="user"></span>
+            </h3>
+            <h3>
+                Status: 
+                <span id="status"></span>
+            </h3>
+        </div>
+        <div id="user-input">
+            <h4>
+                Add a status
+            </h4>
+            <form>
+                    <div class="form-group row">
+                      <label for="user-name">Your Name</label>
+                      <input class="form-control" id="user-name" type="text">
+                    </div>
+                    <div class="form-group row">
+                      <label for="status">Status</label>
+                      <input class="form-control" id="status" type="text">
+                    </div>
+                    <button class="btn btn-primary" id="submit-status" type="submit">Submit</button>
+                  </form>
+    
+        </div>
+    </div>
+    
+    <script src="script.js"></script>
+    </body>
+    </html>
