--- a/assets/index.html
+++ b/assets/index.html
@@ -6,45 +6,46 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <script src="https://www.gstatic.com/firebasejs/5.8.4/firebase.js"></script>
     <title>Work Riˈmōt</title>
 </head>
 <body>
-    <div class="container">
-        <div id="recent-places">
-            <h3>
-            Recent Location Updates: 
-            <span id="location"></span>
-            </h3>
-        </div>
-        <div id="user-comments">
-            <h3>
-                User: 
-                <span id="user"></span>
-            </h3>
-            <h3>
-                Status: 
-                <span id="status"></span>
-            </h3>
-        </div>
-        <div id="user-input">
-            <h4>
-                Add a status
-            </h4>
-            <form>
-                    <div class="form-group row">
-                      <label for="user-name">Your Name</label>
-                      <input class="form-control" id="user-name" type="text">
-                    </div>
-                    <div class="form-group row">
-                      <label for="status">Status</label>
-                      <input class="form-control" id="status" type="text">
-                    </div>
-                    <button class="btn btn-primary" id="submit-status" type="submit">Submit</button>
-                  </form>
-    
-        </div>
+<div class="container">
+    <div id="recent-places">
+        <h3>
+        Recent Location Updates: 
+        <span id="location"></span>
+        </h3>
     </div>
-    
-    <script src="script.js"></script>
-    </body>
-    </html>
+    <div id="user-comments">
+        <h3>
+            User: 
+            <span id="user"></span>
+        </h3>
+        <h3>
+            Status: 
+            <span id="status"></span>
+        </h3>
+    </div>
+    <div id="user-input">
+        <h4>
+            Add a status
+        </h4>
+        <form>
+                <div class="form-group row">
+                  <label for="user-name">Your Name</label>
+                  <input class="form-control" id="user-name" type="text">
+                </div>
+                <div class="form-group row">
+                  <label for="status">Status</label>
+                  <input class="form-control" id="status" type="text">
+                </div>
+                <button class="btn btn-primary" id="submit-status" type="submit">Submit</button>
+              </form>
+
+    </div>
+</div>
+
+<script src="script.js"></script>
+</body>
+</html>
