--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
             </div>
             <div class="row">
                 <div class="col-md-3 category-responsive">
-                    <a href="#" class="category-wrap">
+                    <a href="/search/?lat=40.7870106&lang=-73.97536760000003" class="category-wrap">
                         <div class="category-block">
                             <svg class="category-img" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="Capa_1" x="0px" y="0px" viewBox="0 0 496 496" style="enable-background:new 0 0 496 496;" xml:space="preserve" width="512px" height="512px">
                                 <!-- svg code -->
@@ -263,7 +263,7 @@
                     </a>
                 </div>
                 <div class="col-md-3 category-responsive">
-                    <a href="#" class="category-wrap">
+                    <a href="/search/?lat=40.77356489999999&lang=-73.9565551" class="category-wrap">
                         <div class="category-block">
                             <svg class="category-img" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="Layer_1" x="0px" y="0px" viewBox="0 0 469.824 469.824" style="enable-background:new 0 0 469.824 469.824;" xml:space="preserve" width="512px"
                                 height="512px"><g><g>
@@ -284,7 +284,7 @@
                     </a>
                 </div>
                 <div class="col-md-3 category-responsive">
-                    <a href="#" class="category-wrap">
+                    <a href="/search/?lat=40.7637581&lang=-73.99181809999999" class="category-wrap">
                         <div class="category-block">
                             <svg class="category-img" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="Layer_2" x="0px" y="0px" viewBox="0 0 503.607 503.607" style="enable-background:new 0 0 503.607 503.607;" xml:space="preserve" width="512px"
                                 height="512px"><g><g transform="translate(1 1)">
@@ -309,7 +309,7 @@
                     </a>
                 </div>
                 <div class="col-md-3 category-responsive">
-                    <a href="#" class="category-wrap">
+                    <a href="/search/?lat=40.7571432&lang=-73.9718815" class="category-wrap">
                         <div class="category-block">
                             <svg class="category-img" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="Layer_3" x="0px" y="0px" viewBox="0 0 512 512" style="enable-background:new 0 0 512 512;" xml:space="preserve" width="512px" height="512px">
                                 <!-- <g><g>
@@ -338,7 +338,7 @@
 
             <div class="row">
                 <div class="col-md-3 category-responsive">
-                    <a href="#" class="category-wrap">
+                    <a href="/search/?lat=40.72330099999999&lang=-74.00298829999997" class="category-wrap">
                         <div class="category-block">
                             <svg class="category-img" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="Capa_2" x="0px" y="0px" viewBox="0 0 60 60" style="enable-background:new 0 0 60 60;" xml:space="preserve" width="512px" height="512px"><g><g>
               <path d="M59,16V2H1v14H0v37.259C0,55.873,2.127,58,4.742,58h50.517C57.873,58,60,55.873,60,53.259V16H59z M56.5,16l-5.18-6.906   L56.414,4H57v12H56.5z M11,16V9c0-0.024-0.012-0.046-0.014-0.07c-0.005-0.064-0.02-0.124-0.036-0.187   c-0.011-0.042-0.01-0.085-0.027-0.125c-0.009-0.022-0.027-0.039-0.037-0.061c-0.027-0.055-0.065-0.102-0.103-0.152   c-0.028-0.036-0.044-0.081-0.077-0.113L6.414,4h47.172l-4.292,4.292c-0.032,0.032-0.049,0.077-0.077,0.113   c-0.038,0.05-0.075,0.097-0.102,0.152c-0.011,0.022-0.028,0.038-0.038,0.061c-0.017,0.04-0.016,0.084-0.027,0.125   c-0.017,0.063-0.032,0.122-0.036,0.187C49.012,8.954,49,8.976,49,9v7H11z M6,16l3-4.001V16H6z M51,11.999L54,16h-3V11.999z M3,4   h0.586L8.68,9.094L3.5,16H3V4z M58,53.259C58,54.771,56.77,56,55.258,56H4.742C3.23,56,2,54.771,2,53.259V18h56V53.259z" data-original="#000000" class="active-path" data-old_color="#ff3a6d" fill="#ff3a6d"/>
@@ -351,7 +351,7 @@
                     </a>
                 </div>
                 <div class="col-md-3 category-responsive">
-                    <a href="#" class="category-wrap">
+                    <a href="/search/?lat=40.7335719&lang=-74.00274179999997" class="category-wrap">
                         <div class="category-block">
                             <svg class="category-img" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="Capa_3" x="0px" y="0px" viewBox="0 0 511.988 511.988" style="enable-background:new 0 0 511.988 511.988;" xml:space="preserve" width="512px"
                                 height="512px"><g><g>
@@ -384,7 +384,7 @@
                     </a>
                 </div>
                 <div class="col-md-3 category-responsive">
-                    <a href="#" class="category-wrap">
+                    <a href="/search/?lat=40.7465004&lang=-74.00137370000004" class="category-wrap">
                         <div class="category-block">
                             <svg class="category-img" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="Capa_4" x="0px" y="0px" viewBox="0 0 33 33" style="enable-background:new 0 0 33 33;" xml:space="preserve" width="512px" height="512px">
                                 <!-- <g><g>
@@ -405,7 +405,7 @@
                     </a>
                 </div>
                 <div class="col-md-3 category-responsive">
-                    <a href="#" class="category-wrap">
+                    <a href="/search/?lat=40.7264773&lang=-73.9815337" class="category-wrap">
                         <div class="category-block">
                             <svg class="category-img" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="Capa_5" x="0px" y="0px" viewBox="0 0 61.168 61.168" style="enable-background:new 0 0 61.168 61.168;" xml:space="preserve" width="512px"
                                 height="512px">
