resolved drop-down menu issues - had to reorganize my scripts in html

--- a/index.html
+++ b/index.html
@@ -7,10 +7,7 @@
 
     <title>Work Rimot - Bringing People Together</title>
 
-    
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+    <!-- Relinked Boostrap CSS CDN-->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,400i,500,700,900" rel="stylesheet">
@@ -464,16 +461,14 @@
     <!--//END FOOTER -->
 
 
-
-
-    <!-- jQuery, Bootstrap JS. -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <!-- <script src="assets/js/jquery-3.2.1.min.js"></script>
-    <script src="assets/js/popper.min.js"></script> -->
+    <!--//Needed to reorganize my script links for the dropdown menu to work-->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://unpkg.com/popper.js/dist/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
 
     <script>
         $(window).scroll(function() {
-            // 100 = The point you would like to fade the nav in.
+           
             $("#parallax-header").css("backgroundPositionY",($(window).scrollTop())*0.5);
             if ($(window).scrollTop() > 100) {
 
