--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
         </div>
     </section>
     <!--//END FEATURED PLACES -->
-    <!--============================= CATEGORIES =============================-->
+    <!--============================= NEIGHBORHOODS =============================-->
     <section class="main-block">
         <div class="container">
             <div class="row justify-content-center">
