--- a/search.html
+++ b/search.html
@@ -60,6 +60,10 @@
 		.fixed {
 			border: none;
 		}
+		.slider {
+			min-height: 900px;
+			padding-top: 50px;
+		}
 	</style>
 </head>
 
@@ -527,10 +531,7 @@
     </footer>
     <!--//END FOOTER -->
 
-
-
-
-    <!-- jQuery, Bootstrap JS. -->
+	<!-- jQuery, Bootstrap JS. -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <!-- <script src="assets/js/jquery-3.2.1.min.js"></script>
     <script src="assets/js/popper.min.js"></script> -->
@@ -578,8 +579,8 @@
 
         // Set the data fields to return when the user selects a place.
         autocomplete.setFields(
-            ['address_components', 'geometry', 'icon', 'name']);
-
+            //['address_components', 'geometry', 'icon', 'name']);
+		  	['name']);
         //var infowindow = new google.maps.InfoWindow();
         //var infowindowContent = document.getElementById('infowindow-content');
         //infowindow.setContent(infowindowContent);
