--- a/add-listing.html
+++ b/add-listing.html
@@ -5,7 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
-    <title>Work Rimot - Bringing People Together</title>
+    <title>Add a Listing - Work Rimot</title>
+    <meta name="description" content="Add your business to Rimot and get people working in your establishment" />
+    <meta name="keywords" content="work, spaces, free, cafe, coffee, wifi, manhattan, new york, remote" />
+
+    <meta property="og:title" content="About Us - Work Rimot" />
+    <meta property="og:type" content="website"/>
+    <meta property="og:description" content="Learn more about Rimot and the team." />
+    <meta property="og:url" content="https://workrimot.com/add-listing.html" />
 
     <!-- Relinked Boostrap CSS CDN-->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
@@ -28,19 +35,22 @@
             <div class="container-fluid fixed">
                 <div class="row">
                     <div class="col-md-12">
-                        <nav class="navbar navbar-expand-lg navbar-light">
-                            <a class="navbar-brand" href="index.html"></a>
-                            <img src="assets/images/rimote-logo.svg" alt="rimote-logo" id="rimotLogo" href="index.html">
+                        <nav class="navbar navbar-expand-md navbar-light">
+                            <a class="navbar-brand" href="/">
+                                <img src="assets/images/rimote-logo.svg" alt="rimote-logo" id="rimotLogo" href="index.html">
+                            </a>
                             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="icon-menu"></span>
-              </button>
+                                <span class="line1"></span>
+                                <span class="line2"></span>
+                                <span class="line3"></span>
+                            </button>
                             <div class="collapse navbar-collapse justify-content-end" id="navbarNavDropdown">
                                 <ul class="navbar-nav">
                                     <li class="nav-item dropdown">
                                         <a class="nav-link" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                     Explore
-                     <span class="icon-arrow-down"></span>
-                   </a>
+                                            Explore
+                                            <span class="icon-arrow-down"></span>
+                                        </a>
                                         <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                                             <a class="dropdown-item" href="#">Morningside Heights</a>
                                             <a class="dropdown-item" href="#">Harlem</a>
@@ -69,12 +79,12 @@
                                         </div>
                                     </li>
                                     <li class="nav-item active">
-                                        <a class="nav-link" href="#">About</a>
+                                        <a class="nav-link" href="./about.html">About</a>
                                     </li>
                                     <li class="nav-item">
-                                        <a class="nav-link" href="#">Blog</a>
+                                        <a class="nav-link" href="./blog.html">Blog</a>
                                     </li>
-                                    <li><a href="#" class="btn btn-outline-light top-btn"><span class="ti-plus"></span> Add Listing</a></li>
+                                    <li><a href="./add-listing.html" class="btn btn-outline-light top-btn"><span class="ti-plus"></span> Add Listing</a></li>
                                 </ul>
                             </div>
                         </nav>
@@ -84,15 +94,12 @@
         </div>
     </div>
     <!-- SLIDER -->
-    <section id="parallax-header" >
-        <!-- <img src="assets/images/slider.jpg" class="img-fluid" alt="#"> -->
-        <div class="container">
-            <div class="row d-flex justify-content-center">
-                <div class="col-md-12">
-                    <h1>Add a Listing</h1>
-                </div>
+    <section id="parallax-header" class="masthead">
+       <div class="container">
+           <div class="columns col-md-12">
+                <h1 class="text-center">About Us</h1>  <!--okay-->          
             </div>
-        </div>
+       </div>
     </section>
     <script>
         document.getElementById("parallax-header").setAttribute('style',"opacity: 1; background: #fff url(assets/images/slider.jpg) no-repeat; background-size: cover; backgroundPositionY:"+(document.body.scrollTop)*0.5 );
