Added links to Explore locations on navbar

--- a/about.html
+++ b/about.html
@@ -52,19 +52,19 @@
                                             <span class="icon-arrow-down"></span>
                                         </a>
                                         <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                                            <a class="dropdown-item" href="#">Morningside Heights</a>
-                                            <a class="dropdown-item" href="#">Harlem</a>
-                                            <a class="dropdown-item" href="#">East Harlem</a>
-                                            <a class="dropdown-item" href="#">Upper West Side</a>
-                                            <a class="dropdown-item" href="#">Upper East Side</a>
-                                            <a class="dropdown-item" href="#">Midtown West & East</a>
-                                            <a class="dropdown-item" href="#">Chelsea</a>
-                                            <a class="dropdown-item" href="#">Murray Hill</a>
-                                            <a class="dropdown-item" href="#">Gramercy</a>
-                                            <a class="dropdown-item" href="#">East Village</a>
-                                            <a class="dropdown-item" href="#">Greenwich Village</a>
-                                            <a class="dropdown-item" href="#">Soho</a>
-                                            <a class="dropdown-item" href="#">Lower East Side</a>
+                                            <a class="dropdown-item" href="search/index.html?lat=40.80895639999999&lang=-73.96243270000002">Morningside Heights</a>
+                                            <a class="dropdown-item" href="search/index.html?lat=40.81155039999999&lang=-73.9464769">Harlem</a>
+                                            <a class="dropdown-item" href="search/index.html?lat=40.7957399&lang=-73.9389213">East Harlem</a>
+                                            <a class="dropdown-item" href="search/index.html?lat=40.7870106&lang=-73.97536760000003">Upper West Side</a>
+                                            <a class="dropdown-item" href="search/index.html?lat=40.77356489999999&lang=-73.9565551">Upper East Side</a>
+                                            <a class="dropdown-item" href="search/index.html?lat=40.7637581&lang=-73.99181809999999">Midtown West & East</a>
+                                            <a class="dropdown-item" href="search/index.html?lat=40.7465004&lang=-74.00137370000004">Chelsea</a>
+                                            <a class="dropdown-item" href="search/index.html?lat=40.7478792&lang=-73.9756567">Murray Hill</a>
+                                            <a class="dropdown-item" href="search/index.html?lat=40.7367783&lang=-73.98447220000003">Gramercy</a>
+                                            <a class="dropdown-item" href="search/index.html?lat=40.7264773&lang=-73.9815337">East Village</a>
+                                            <a class="dropdown-item" href="search/index.html?lat=40.7335719&lang=-74.00274179999997">Greenwich Village</a>
+                                            <a class="dropdown-item" href="search/index.html?lat=40.72330099999999&lang=-74.00298829999997">Soho</a>
+                                            <a class="dropdown-item" href="search/index.html?lat=40.715033&lang=-73.98427240000001">Lower East Side</a>
                                         </div>
                                     </li>
                                     <li class="nav-item dropdown">
