--- a/search/index.html
+++ b/search/index.html
@@ -69,6 +69,9 @@
     </header>
 
     <div id="map"></div>
+    <div id="placeCard" class="card" style="display: none; position: absolute; top: 50%; left: 50%;  background-color: red; width: 300px; height: 300px; z-index: 10;">
+    
+    </div>
 
 
   
