testing on click function

--- a/index.html
+++ b/index.html
@@ -562,7 +562,7 @@
                                 $('.responsiveRow').slick('slickAdd',`
                                 <div class="featured-responsive">
                                     <div class="featured-place-wrap">
-                                        <a href="/search/?lat=${place.geometry.location.lat()}&lang=${place.geometry.location.lng()}&zoom=17">
+                                        <a href="/search/?lat=${place.geometry.location.lat()}&lang=${place.geometry.location.lng()}&zoom=17&id=${place.id}">
                                             
                                             <span style="background: url(${photo}) center center no-repeat; background-size: cover; display: inline-block; width: 100%;">
                                             <img src="assets/images/featured3.jpg" style="opacity: 0;" class="img-fluid" alt="image ${i}" />
