Update addListing page

--- a/index.html
+++ b/index.html
@@ -84,6 +84,7 @@
                                                 East Side</a>
                                         </div>
                                     </li>
+                                    <!--
                                     <li class="nav-item dropdown">
                                         <a class="nav-link" href="#" id="navbarDropdownMenuLink1" data-toggle="dropdown"
                                             aria-haspopup="true" aria-expanded="false">
@@ -96,14 +97,18 @@
                                             <a class="dropdown-item" href="#">Something else here</a>
                                         </div>
                                     </li>
+                                    -->
                                     <li class="nav-item active">
                                         <a class="nav-link" href="./about.html">About</a>
                                     </li>
+                                    <!--
                                     <li class="nav-item">
                                         <a class="nav-link" href="./blog.html">Blog</a>
                                     </li>
+                                    -->
                                     <li><a href="./add-listing.html" class="btn btn-outline-light top-btn"><span class="ti-plus"></span>
-                                            Add Listing</a></li>
+                                            Add Listing</a>
+                                    </li>
                                 </ul>
                             </div>
                         </nav>
@@ -136,9 +141,11 @@
                                             id="search">
                                     </div>
                                 </form>
+                                <!--
                                 <div class="slider-link">
                                     <a href="#">Browse Popular</a><span>or</span> <a href="#">Recently Added</a>
                                 </div>
+                                -->
                             </div>
                         </div>
                     </div>
@@ -168,6 +175,7 @@
                     <!--================= LOADING FEATURED PLACES DYNAMICALLY ====================-->
                 </div>
             </div>
+            <!--
             <div class="row justify-content-center">
                 <div class="col-md-4">
                     <div class="featured-btn-wrap">
@@ -175,6 +183,7 @@
                     </div>
                 </div>
             </div>
+            -->
         </div>
         </div>
     </section>
@@ -476,7 +485,7 @@
             <div class="row justify-content-center">
                 <div class="col-md-4">
                     <div class="featured-btn-wrap">
-                        <a href="#" class="btn btn-danger"><span class="ti-plus"></span> ADD LISTING</a>
+                        <a href="./add-listing.html" class="btn btn-danger"><span class="ti-plus"></span> ADD LISTING</a>
                     </div>
                 </div>
             </div>
