changes to about/add-listing

--- a/about.html
+++ b/about.html
@@ -123,8 +123,14 @@
             <div class="row">
                 <div class="col-md-12">
                     <p>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus eget varius erat. Aenean odio tortor, venenatis id accumsan sit amet, fermentum eu purus. Aliquam euismod posuere nunc. Donec hendrerit, erat id fermentum imperdiet, urna purus eleifend nisi, id venenatis neque libero eget erat. Morbi tincidunt venenatis sem eget posuere. Suspendisse potenti. Quisque sit amet accumsan diam. In tempor non elit at semper. Integer ut orci pretium, placerat dui eget, gravida nisl. Cras vel felis dui.
-                    </p>
+                       With a shared goal of finding a convenient workspace and access to real-time information, the vision of Rimot evolved, as a solution to a common problem we all face. We provide features that includes bespoke information, customized to various neighborhoods, keeping people in the know about what is going on at disparate venues, real-time, provides opportunities for live check-ins, is user-friendly and has a visually-appealing, mobile-responsive design: all to create a socially-viable network for an ever-evolving community that seeks to digest real-time information of what's happening around town. As the Rimot team, our journey involved confronting a common problem: being unable to find a convenient place to do their work; and developing an application that provides an accessible solution by allowing users to find a place where they can do their work, providing real time status on the volume of a particular place, amenities available, time limits, etc. 
+                       <h6> Key features </h6>
+                       <ul> 
+                        <li> Allows users to search either their vicinity or other neighborhoods for available places.</li> 
+                        <li> Users are able to access a live chat and find out the status of a particular place, as well as amenities provided.</li> 
+                        <li> Places can use this tool to try and keep up business flow during their slower hours.</li> 
+                        <li>  Responsiveness.  </li> 
+                        </ul>
                 </div>
             </div>
         </div>
