--- a/add-listing.html
+++ b/add-listing.html
@@ -101,7 +101,7 @@
     <section id="parallax-header" class="masthead">
        <div class="container">
            <div class="columns col-md-12">
-                <h1 class="text-center">Add a Listing</h1>  <!--okay-->          
+                <h1 class="text-center">Add Listing</h1>  <!--okay-->          
             </div>
        </div>
     </section>
