simplify createMarker function

--- a/add-listing.html
+++ b/add-listing.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
-    <title>Add a Listing - Work Rimot</title>
+    <title>Add Listing - Work Rimot</title>
     <meta name="description" content="Add your business to Rimot and get people working in your establishment" />
     <meta name="keywords" content="work, spaces, free, cafe, coffee, wifi, manhattan, new york, remote" />
 
@@ -81,7 +81,7 @@
                                     </li>
                                     -->
                                     <li class="nav-item active">
-                                        <a class="nav-link" href="./about.html">About</a>
+                                        <a class="nav-link" href="./about.html">About Us</a>
                                     </li>
                                     <!--
                                     <li class="nav-item">
