--- a/about.html
+++ b/about.html
@@ -81,7 +81,7 @@
                                     </li>
                                     -->
                                     <li class="nav-item active">
-                                        <a class="nav-link" href="./about.html">About</a>
+                                        <a class="nav-link" href="./about.html">About Us</a>
                                     </li>
                                     <!--
                                     <li class="nav-item">
