--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                                     </li>
                                     -->
                                     <li class="nav-item active">
-                                        <a class="nav-link" href="./about.html">About</a>
+                                        <a class="nav-link" href="./about.html">About Us</a>
                                     </li>
                                     <!--
                                     <li class="nav-item">
