fix rotation on get location

--- a/index.html
+++ b/index.html
@@ -550,7 +550,8 @@
 
         function getLocation() {
             if (navigator.geolocation) {
-            navigator.geolocation.getCurrentPosition(showPosition);
+                navigator.geolocation.getCurrentPosition(showPosition);
+                $(".get-location").addClass("rotate");
             } else {
             alert("Geolocation is not supported by this browser.");
             }
