--- a/index.html
+++ b/index.html
@@ -525,22 +525,24 @@
     <script>
         
         var input = document.getElementById("search");
-        google.maps.event.addDomListener(input, 'keydown', function(event) { 
-            if (event.keyCode === 13) { 
-                event.preventDefault(); 
-            }
-        }); 
-        
         var autocomplete = new google.maps.places.Autocomplete(input);
 
-        autocomplete.addListener('place_changed', function (event) {
+        google.maps.event.addDomListener(input, 'keydown', function(event) { 
             if (event.keyCode === 13) { 
-                event.preventDefault(); 
+                event.preventDefault();
+                if($("#search").val()){
+                    google.maps.event.trigger(event.target, 'keydown', {
+                        keyCode: 40,
+                    });
+                }
             }
+        }); 
+
+        autocomplete.addListener('place_changed', function (event) {
             var place = autocomplete.getPlace();
             if (!place.geometry) {
-                window.alert("No details available for input: '" + place.name + "'");
-                return event.keyCode = 40;
+                //window.alert("No details available for input: '" + place.name + "'");
+                //return;
             } else {
 
                 window.location = './search/?lat=' + place.geometry.location.lat() + '&lang=' + place.geometry.location.lng() + "&zoom=17&id=" + place.id;
