--- a/search/index.html
+++ b/search/index.html
@@ -13,6 +13,7 @@
     <script src="https://www.gstatic.com/firebasejs/5.8.5/firebase.js"></script>
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDgBO7u3km3m85oAstb-On7w7m5k78g_hY&libraries=places&callback=initMap"
         async defer></script>
+    <script src="../assets/js/moment.min.js"></script>
     <script src="../assets/js/app.js"></script>
   </head>
   <body>
