changed red Invalid fields to white

--- a/add-listing.html
+++ b/add-listing.html
@@ -69,8 +69,8 @@
         } 
         /* Style for the invalid fields */
         input:invalid{
-          border-color: #900;
-          background-color: #FDD;
+          border-color: #fff;
+          background-color: #fff;
         }
 
         input:focus:invalid {
