updated about us bio

--- a/about.html
+++ b/about.html
@@ -148,26 +148,28 @@
             </div>
             <div class="row justify-content-center">
                 <div class="col-lg-2 col-md-4 member-name">
-                        <h6>Robert Perea-Martinez</h6>
+                    <h6>Robert Perea-Martinez</h6>
                     <p>My name is Robert Perea-Martinez, and I am currently a student at the Columbia Engineering Coding Bootcamp. I enjoy the challenge as well as the opportunity to become a Fullstack Javascript Developer.</p>
                 </div>
                 <div class="col-lg-2 col-md-4 member-name">
-                            <h6>James Tagorda</h6>
-                            <p>I have 20–plus years exploiting advanced technologies to improve web-user experiences, and definitive expertise in conceiving and implementing internet solutions.</p>
+                    <h6>James Tagorda</h6>
+                    <p>I have 20–plus years exploiting advanced technologies to improve web-user experiences, and definitive expertise in conceiving and implementing internet solutions.</p>
                 </div>
                 <div class="col-lg-2 col-md-4 member-name">
                     <h6>Michael Rosario</h6>
-               <p> Michael Rosario is a web developer, designer, project manager and the owner of Elemento, Inc. He provides online solutions by creating websites, banner ads, html emails and anything and everything from the web!</p>
+                    <p> Michael Rosario is a web developer, designer, project manager and the owner of Elemento, Inc. He provides online solutions by creating websites, banner ads, html emails and anything and everything from the web!</p>
                 </div>
                 <div class="col-lg-2 col-md-4 member-name">
                     <h6>Danny Lee</h6>
-                    <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-                                    consequat.</p>
+                    <p> A Self proclaimed creative pantologist (A pantologist is someone who studies all the things). Danny has a diverse employment history and has worked in many different spaces.  He has worked as communications director in state level politics, production manager for both large format printing and fine printing, athletic apparel & mens comtempory designer, and semi-pro beach volleyball athelte & coach.  
+                        
+                    Currently, Danny is enrolled as a student at Columbia Unversity's Engineering Fullstack Bootcamp and looking to persue a full-time (perminant) career as a developer.
+                    </p>
                 </div>
                 <div class="col-lg-2 col-md-4 member-name">
-                                <h6>Clifton Williams</h6>
-                                <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-                                        consequat.</p>
+                    <h6>Clifton Williams</h6>
+                    <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+                    consequat.</p>
                 </div>
             </div>
         </div>
