updated both danny and cliff about us bio

--- a/about.html
+++ b/about.html
@@ -161,10 +161,7 @@
                 </div>
                 <div class="col-lg-2 col-md-4 member-name">
                     <h6>Danny Lee</h6>
-                    <p> A Self proclaimed creative pantologist (A pantologist is someone who studies all the things). Danny has a diverse employment history and has worked in many different spaces.  He has worked as communications director in state level politics, production manager for both large format printing and fine printing, athletic apparel & mens comtempory designer, and semi-pro beach volleyball athelte & coach.  
-                        
-                    Currently, Danny is enrolled as a student at Columbia Unversity's Engineering Fullstack Bootcamp and looking to persue a full-time (perminant) career as a developer.
-                    </p>
+                    <p> Danny is currently enrolled as a student at Columbia Unversity's Engineering Fullstack Bootcamp and looking to persue a full-time (perminant) career as a developer.</p>
                 </div>
                 <div class="col-lg-2 col-md-4 member-name">
                     <h6>Clifton Williams</h6>
