add google map UI

--- a/search/index.html
+++ b/search/index.html
@@ -18,6 +18,9 @@
   </head>
   <body>
 
+  <div class="main-container">
+
+
    
     <header>
         <a class="Logo" href="/">
@@ -35,7 +38,8 @@
     </header>
 
     <div id="map"></div>
-
+  
+  </div>
 
   
   </body>
