--- a/search/index.html
+++ b/search/index.html
@@ -6,8 +6,9 @@
     <meta charset="utf-8">
     <!-- Themify Icon -->
     <link rel="stylesheet" href="../assets/css/themify-icons.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
     <link rel="stylesheet" href="../assets/css/map.css">
-  
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   </head>
   <body>
 
@@ -35,14 +36,13 @@
   </div>
 
 
-
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  
   <!-- script src="https://developers.google.com/maps/documentation/javascript/examples/markerclusterer/markerclusterer.js"></script> -->
   <script src="https://www.gstatic.com/firebasejs/5.8.5/firebase.js"></script>
-  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDgBO7u3km3m85oAstb-On7w7m5k78g_hY&libraries=places&callback=initMap"
-      async defer></script>
   <script src="../assets/js/moment.min.js"></script>
-  <script src="../assets/js/app.js"></script>
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDgBO7u3km3m85oAstb-On7w7m5k78g_hY&libraries=places&callback=initMap"
+  async defer></script>
+  <script src="../assets/js/app.js" defer></script>
 
   
   </body>
