--- a/about.html
+++ b/about.html
@@ -27,6 +27,16 @@
     <!-- Main CSS -->
     <link rel="stylesheet" href="assets/css/style.css">
 
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-136081462-1"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'UA-136081462-1');
+    </script>
+
 </head>
 
 <body>
