--- a/add-listing.html
+++ b/add-listing.html
@@ -92,6 +92,17 @@
         }
     </style>
 
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-136081462-1"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'UA-136081462-1');
+    </script>
+
+
 </head>
 
 <body id="add-listing">
