--- a/development/auto-login.html
+++ b/development/auto-login.html
@@ -43,6 +43,17 @@
         },1000);
 
     </script>
+
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-136081462-1"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'UA-136081462-1');
+    </script>
+
     
 
 </head>
