--- a/development/index.html
+++ b/development/index.html
@@ -30,7 +30,16 @@
               transform: translateY(-50%);
         }
     </style>
-    
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-136081462-1"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'UA-136081462-1');
+    </script>
+
 
 </head>
 
