remove API for portfolio

--- a/add-listing.html
+++ b/add-listing.html
@@ -326,7 +326,7 @@
     <!--//Needed to reorganize my script links for the dropdown menu to work-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://www.gstatic.com/firebasejs/5.8.5/firebase.js"></script>
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDgBO7u3km3m85oAstb-On7w7m5k78g_hY&libraries=places"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=0&libraries=places"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
     <script src="../assets/js/global.js"></script>
   
