--- a/search/index.html
+++ b/search/index.html
@@ -51,7 +51,7 @@
   <!-- script src="https://developers.google.com/maps/documentation/javascript/examples/markerclusterer/markerclusterer.js"></script> -->
   <script src="https://www.gstatic.com/firebasejs/5.8.5/firebase.js"></script>
   <script src="../assets/js/moment.min.js"></script>
-  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDgBO7u3km3m85oAstb-On7w7m5k78g_hY&libraries=places&callback=initMap"
+  <script src="https://maps.googleapis.com/maps/api/js?key=0&libraries=places&callback=initMap"
   async defer></script>
   <script src="../assets/js/app.js" defer></script>
 
